# AnimeAPI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  python.md  requirements.txt  test_main.http
schemas/: anime_response.py
services/: catalog_service.py  exceptions.py  fetch_anime_service.py  translate_service.py
tests/: conftest.py  test_services.py
utils/: get_data_json.py  loguru_config.py  settings.py
